- Experimental modifications for using our "sick_visionary_cpp_shared" library inside "src/sdk/visionary.c"

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -69,6 +69,7 @@ add_subdirectory(libsoundio)
 add_subdirectory(libyuv)
 add_subdirectory(libuvc)
 add_subdirectory(spdlog)
+add_subdirectory(sick_visionary_cpp_shared)
 if (NOT ${CMAKE_SYSTEM_NAME} STREQUAL "WindowsStore")
     add_subdirectory(libusb)
 endif()
