--- a/extern/sick_visionary_cpp_shared/CMakeLists.txt
+++ b/extern/sick_visionary_cpp_shared/CMakeLists.txt
@@ -25,6 +25,8 @@ aux_source_directory(. SRC_LIST)
 
 add_library(${PROJECT_NAME} STATIC ${SRC_LIST})
 
+add_library(sick_visionary_cpp_shared::sick_visionary_cpp_shared ALIAS sick_visionary_cpp_shared)
+
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_11)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
 
@@ -36,3 +38,5 @@ target_include_directories(${PROJECT_NAME}
 if(WIN32)
   target_link_libraries(${PROJECT_NAME} wsock32 ws2_32)
 endif()
+
+
