--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(queue)
 add_subdirectory(record)
 add_subdirectory(rwlock)
 add_subdirectory(sdk)
+add_subdirectory(sick_visionary)
 add_subdirectory(tewrapper)
 add_subdirectory(transformation)
 add_subdirectory(usbcommand)
